-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.6.0
-
None
-
e418980b2 (dev), 41a21e8ac (6.6)
QPalette::accentColor (later to QPalette::accent) introduced in https://codereview.qt-project.org/c/qt/qtbase/+/477863 isn't documentated. Uncovered in API review.
| For Gerrit Dashboard: QTBUG-116930 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 503037,2 | Update documentation for QPalette::accent API | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 503322,2 | Update documentation for QPalette::accent API | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |