Update documentation for QPalette::accent API

The documentation for QPalette::accent had been missed and its updated
as part of this patchset.

Amends patchset 17c589df94a2245ee92d45839c2cba73566d7310.

Fixes: QTBUG-116930
Pick-to: 6.6
Change-Id: Iaa53e15dbecaa3c741e2db013c96b4424be39e91
Reviewed-by: Jan Arve Sæther <jan-arve.saether@qt.io>